# web-paging

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  web_paging.py
.github/workflows/: python-publish.yml
tests/: test_web_paging.py
